# scripting-engine

./: LICENSE.txt  ReadMe.md  pyproject.toml
Resources/: Version.md
src/modules/: CrawlWebsite.py  DKronClient.py  JupToPy.py  welcome.py
src/pepper_x_2/: __about__.py  __init__.py  cssMain.tcss  main.py  test.py
