[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[build.targets.sdist]
include = [
  "src/"
]
exclude = []

[project]
name = "pepper-x-2"
dynamic = ["version"]
description = 'Spicy Scripting Engine'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "harrellbm", email = "brendenharrell1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "textual==0.55.1",
  "textual-dev",
  "rich"
  ]

[project.scripts]
pepperX = "src.pepper_x_2.main:main"

[project.urls]
Documentation = "https://github.com/unknown/pepper-x-2#readme"
Issues = "https://github.com/unknown/pepper-x-2/issues"
Source = "https://github.com/unknown/pepper-x-2"

[tool.hatch.version]
path = "src/pepper_x_2/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pepper_x_2 tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.coverage.run]
source_pkgs = ["pepper_x_2", "tests"]
branch = true
parallel = true
omit = [
  "src/pepper_x_2/__about__.py",
]

[tool.coverage.paths]
pepper_x_2 = ["src/pepper_x_2", "*/pepper-x-2/src/pepper_x_2"]
tests = ["tests", "*/pepper-x-2/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
